# mcp-demo

./: Readme.txt
OrderManagementService/: pom.xml
OrderManagementService/src/main/java/com/coe/ai/mcp/oms/: OrderManagementServiceApplication.java
OrderManagementService/src/main/java/com/coe/ai/mcp/oms/model/: Order.java
OrderManagementService/src/main/java/com/coe/ai/mcp/oms/service/: OrderService.java
OrderManagementService/src/main/resources/: application.properties
OrderManagementService/src/test/java/com/coe/ai/mcp/oms/: OrderManagementServiceApplicationTests.java
UserManagementService/: pom.xml
UserManagementService/src/main/java/com/coe/ai/mcp/ums/: UserManagementServiceApplication.java
UserManagementService/src/main/java/com/coe/ai/mcp/ums/model/: User.java
UserManagementService/src/main/java/com/coe/ai/mcp/ums/service/: UserService.java
UserManagementService/src/main/resources/: application.properties
UserManagementService/src/test/java/com/coe/ai/mcp/ums/: UserManagementServiceApplicationTests.java
client/: .env  .gitignore  app.py  chat_app.py  client.py  mcpserver_config.json  pyproject.toml  requiments.txt
email-service/: email_service.py  main.py  pyproject.toml  requiments.txt  sent_email_to_alice@gmail.com.txt  sent_email_to_chrales@gmail.com.txt
